--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <div class="container">
-    
+    <div class="row">
+      <img src="mpft-ip/ip2/assets/logoBig.png">
+    </div>
   </div>
 </body>
 </html>
