--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
   <title>Anita's Kitchen</title>
   <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
+  <script src="js/jquery-3.3.1.js"></script>
   <script src="js/scripts.js"></script>
 </head>
 <body>
   <div class="container">
-    <div class="row">
+    <div class="row" id="header">
       <img src="mpft-ip/ip2/assets/logoBig.png">
     </div>
   </div>
