Add second row with 4 columns

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
   <div class="container">
     <div class="row" id="header">
       <img src="mpft-ip/ip2/assets/logoBig.png">
+      <p>We Provide The Best Food <br> At The Right Price</p>
+    </div>
+    <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-3"></div>
+      <div class="col-md-3"></div>
+      <div class="col-md-3"></div>
     </div>
   </div>
 </body>
