Add backgrounds for breakfast, lunch and dinner

--- a/index.html
+++ b/index.html
@@ -3,21 +3,41 @@
 <head>
   <title>Anita's Kitchen</title>
   <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <script src="js/jquery-3.3.1.js"></script>
   <script src="js/scripts.js"></script>
 </head>
 <body>
   <div class="container">
     <div class="row" id="header">
-      <img src="mpft-ip/ip2/assets/logoBig.png">
-      <p>We Provide The Best Food <br> At The Right Price</p>
+      <div class="col-md-12">
+        <img src="mpft-ip/ip2/assets/logoBig.png">
+        <p>We Provide The Best Food <br> At The Right Price</p>
+      </div>
     </div>
     <div class="row">
-      <div class="col-md-3"></div>
-      <div class="col-md-3"></div>
-      <div class="col-md-3"></div>
-      <div class="col-md-3"></div>
+      <div class="col-md-3">
+        <div class="row">
+          <p>Happy Hour</p>
+        </div>
+        <div class="row">
+          <p>Party Time</p>
+        </div>
+      </div>
+      <div class="col-md-3" id="breakfast">
+        <p>Breakfast</p>
+      </div>
+      <div class="col-md-3" id="lunch">
+        <p>Lunch</p>
+      </div>
+      <div class="col-md-3" id="dinner">
+        <p>Diner</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        
+      </div>
     </div>
   </div>
 </body>
