--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-3">
-        <div class="row">
+      <div class="col-md-3" id="minirow">
+        <div class="row" class="happyhour">
           <p>Happy Hour</p>
         </div>
-        <div class="row">
+        <div class="row" id="partytime">
           <p>Party Time</p>
         </div>
       </div>
@@ -36,7 +36,16 @@
     </div>
     <div class="row">
       <div class="col-md-12">
-        
+        <div class="fastfood">
+          <img src="" alt="">
+        </div>
+        <h1>Fast Food</h1>
+        <h3>You'll love our delicious food</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h1>Drinks</h1>
+        <h3>You'll love our delicious Drinks</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="Drinks"></div>
       </div>
     </div>
   </div>
