Add images for fast foods and drinks

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="row" id="header">
       <div class="col-md-12">
         <img src="mpft-ip/ip2/assets/logoBig.png">
-        <p>We Provide The Best Food <br> At The Right Price</p>
+        <p>We Provide The Best Food<br> At <strong>Right Price</strong></p>
       </div>
     </div>
     <div class="row">
@@ -25,19 +25,24 @@
         </div>
       </div>
       <div class="col-md-3" id="breakfast">
-        <p>Breakfast</p>
+        <p><em>Breakfast</em></p>
       </div>
       <div class="col-md-3" id="lunch">
-        <p>Lunch</p>
+        <p><em>Lunch</em></p>
       </div>
       <div class="col-md-3" id="dinner">
-        <p>Diner</p>
+        <p><em>Diner</em></p>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12">
-        <div class="fastfood">
-          <img src="" alt="">
+        <div class="fastfood-image">
+          <div class="row">
+            <img src="mpft-ip/ip2/assets/fastFood1.jpg">
+          </div>
+          <div class="row">
+            <img src="mpft-ip/ip2/assets/fastFood2.jpg">
+          </div>
         </div>
         <h1>Fast Food</h1>
         <h3>You'll love our delicious food</h3>
@@ -45,7 +50,21 @@
         <h1>Drinks</h1>
         <h3>You'll love our delicious Drinks</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <div class="Drinks"></div>
+        <div class="drinks-image">
+          <div class="row">
+            <div class="col-md-6">
+              <img src="mpft-ip/ip2/assets/drink1.jpg">
+            </div>
+            <div class="col-md-6">
+              <img src="mpft-ip/ip2/assets/drink2.jpg">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        
       </div>
     </div>
   </div>
