--- a/index.html
+++ b/index.html
@@ -15,42 +15,68 @@
         <p>We Provide The Best Food<br> At <strong>Right Price</strong></p>
       </div>
     </div>
+
     <div class="row">
       <div class="col-md-3" id="minirow">
         <div class="row" class="happyhour">
           <p>Happy Hour</p>
         </div>
+
         <div class="row" id="partytime">
           <p>Party Time</p>
         </div>
       </div>
+
       <div class="col-md-3" id="breakfast">
-        <p><em>Breakfast</em></p>
+        <p class="breakfast"><em>Breakfast</em></p>
       </div>
       <div class="col-md-3" id="lunch">
-        <p><em>Lunch</em></p>
+        <p class="lunch"><em>Lunch</em></p>
       </div>
       <div class="col-md-3" id="dinner">
-        <p><em>Diner</em></p>
+        <p class="dinner"><em>Dinner</em></p>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-12">
-        <div class="fastfood-image">
+
+    <div class="row" id="white-section">
+      <div class="col-md-6">
+        <div class="well">
           <div class="row">
-            <img src="mpft-ip/ip2/assets/fastFood1.jpg">
+            <div class="col-md-12">
+              <img src="mpft-ip/ip2/assets/fastFood1.jpg">
+            </div>
           </div>
           <div class="row">
-            <img src="mpft-ip/ip2/assets/fastFood2.jpg">
+            <div class="col-md-12">
+              <img src="mpft-ip/ip2/assets/fastFood2.jpg">
+            </div>
           </div>
         </div>
-        <h1>Fast Food</h1>
-        <h3>You'll love our delicious food</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <h1>Drinks</h1>
-        <h3>You'll love our delicious Drinks</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <div class="drinks-image">
+      </div>
+
+      <div class="col-md-6">
+        <h2>Fast Foods</h2>
+        <h4>Enjoy our drinks please</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <button type="button" name="button"class="btn btn-default btn-block">VIEW GALLERY</button>
+      </div>
+    </div>
+
+    <div class="row" id="white-section2">
+      <div class="col-md-6">
+        <h2>Drinks</h2>
+        <h4>Enjoy our food please</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <button type="button" name="button" class="btn btn-default btn-block">VIEW GALLERY</button>
+      </div>
+      <div class="col-md-6">
+        <div class="well" >
           <div class="row">
             <div class="col-md-6">
               <img src="mpft-ip/ip2/assets/drink1.jpg">
@@ -62,11 +88,23 @@
         </div>
       </div>
     </div>
+
     <div class="row">
       <div class="col-md-12">
-        
+        <div class="section4">
+          <div class="gallery">
+            <img src="mpft-ip/ip2/assets/fastfood/chickenBurger.jpg">
+            <img src="mpft-ip/ip2/assets/fastfood/beefBurger.jpg">
+            <img src="mpft-ip/ip2/assets/fastfood/chickenPizza.jpg">
+          </div>
+        </div>
       </div>
     </div>
+
+    <div class="row">
+
+    </div>
+
   </div>
 </body>
 </html>
