--- a/index.html
+++ b/index.html
@@ -102,7 +102,18 @@
     </div>
 
     <div class="row">
-
+      <div class="col-md-12">
+        <div class="logo">
+          <img src="mpft-ip/ip2/assets/footerlogos/logo_white.png">
+          <h4>MENU</h4>
+          <p>Thats what we are</p>
+        </div>
+        <div class="social">
+          <img src="mpft-ip/ip2/assets/footerlogos/facebook.png">
+          <img src="mpft-ip/ip2/assets/footerlogos/twitter.png">
+          <img src="mpft-ip/ip2/assets/footerlogos/pinterest.png">
+        </div>
+      </div>
     </div>
 
   </div>
