Put all images in images folder

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     <div class="row" id="header">
       <div class="col-md-12">
-        <img src="mpft-ip/ip2/assets/logoBig.png">
+        <img src="images/assets/logoBig.png">
         <p>We Provide The Best Food<br> At <strong>Right Price</strong></p>
       </div>
     </div>
@@ -43,12 +43,12 @@
         <div class="well">
           <div class="row">
             <div class="col-md-12">
-              <img src="mpft-ip/ip2/assets/fastFood1.jpg">
+              <img src="images/assets/fastFood1.jpg">
             </div>
           </div>
           <div class="row">
             <div class="col-md-12">
-              <img src="mpft-ip/ip2/assets/fastFood2.jpg">
+              <img src="images/assets/fastFood2.jpg">
             </div>
           </div>
         </div>
@@ -79,10 +79,10 @@
         <div class="well" >
           <div class="row">
             <div class="col-md-6">
-              <img src="mpft-ip/ip2/assets/drink1.jpg">
+              <img src="images/assets/drink1.jpg">
             </div>
             <div class="col-md-6">
-              <img src="mpft-ip/ip2/assets/drink2.jpg">
+              <img src="images/assets/drink2.jpg">
             </div>
           </div>
         </div>
@@ -91,12 +91,10 @@
 
     <div class="row">
       <div class="col-md-12">
-        <div class="section4">
-          <div class="gallery">
-            <img src="mpft-ip/ip2/assets/fastfood/chickenBurger.jpg">
-            <img src="mpft-ip/ip2/assets/fastfood/beefBurger.jpg">
-            <img src="mpft-ip/ip2/assets/fastfood/chickenPizza.jpg">
-          </div>
+        <div class="gallery">
+          <img src="images/assets/fastfood/chickenBurger.jpg">
+          <img src="images/assets/fastfood/beefBurger.jpg">
+          <img src="images/assets/fastfood/chickenPizza.jpg">
         </div>
       </div>
     </div>
@@ -104,14 +102,14 @@
     <div class="row">
       <div class="col-md-12">
         <div class="logo">
-          <img src="mpft-ip/ip2/assets/footerlogos/logo_white.png">
+          <img src="images/assets/footerlogos/logo_white.png">
           <h4>MENU</h4>
           <p>Thats what we are</p>
         </div>
         <div class="social">
-          <img src="mpft-ip/ip2/assets/footerlogos/facebook.png">
-          <img src="mpft-ip/ip2/assets/footerlogos/twitter.png">
-          <img src="mpft-ip/ip2/assets/footerlogos/pinterest.png">
+          <img src="images/assets/footerlogos/facebook.png">
+          <img src="images/assets/footerlogos/twitter.png">
+          <img src="images/assets/footerlogos/pinterest.png">
         </div>
       </div>
     </div>
