Add row for email subscription

--- a/index.html
+++ b/index.html
@@ -100,6 +100,18 @@
     </div>
 
     <div class="row">
+      <div class="col-md-12 subscribe">
+        <p>Get our daily food items delivered through your email</p>
+        <form>
+          <input type="text" value="Your email"></input>
+        </form>
+        <form>
+          <input type="submit" value="Subscribe" id="subscribe"></input>
+        </form>
+      </div>
+    </div>
+
+    <div class="row">
       <div class="col-md-12">
         <div class="logo">
           <img src="images/assets/footerlogos/logo_white.png">
