Add styling in fonts, colors and width of div boxes

--- a/index.html
+++ b/index.html
@@ -11,30 +11,30 @@
   <div class="container">
     <div class="row" id="header">
       <div class="col-md-12">
-        <img src="images/assets/logoBig.png">
-        <p>We Provide The Best Food<br> At <strong>Right Price</strong></p>
+        <img src="images/assets/logoBig.png" class="logobig">
+        <h2>We Provide The Best Food<br> At <strong>Right Price</strong></h2>
       </div>
     </div>
 
-    <div class="row">
+    <div class="row meals">
       <div class="col-md-3" id="minirow">
-        <div class="row" class="happyhour">
-          <p>Happy Hour</p>
+        <div class="row" id="happyhour">
+          <h3>Happy Hour</h3>
         </div>
 
         <div class="row" id="partytime">
-          <p>Party Time</p>
+          <h3>Party Time</h3>
         </div>
       </div>
 
       <div class="col-md-3" id="breakfast">
-        <p class="breakfast"><em>Breakfast</em></p>
+        <h3 class="breakfast"><em>Breakfast</em></h3>
       </div>
       <div class="col-md-3" id="lunch">
-        <p class="lunch"><em>Lunch</em></p>
+        <h3 class="lunch"><em>Lunch</em></h3>
       </div>
       <div class="col-md-3" id="dinner">
-        <p class="dinner"><em>Dinner</em></p>
+        <h3 class="dinner"><em>Dinner</em></h3>
       </div>
     </div>
 
@@ -90,7 +90,7 @@
     </div>
 
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-12" id="section4">
         <div class="gallery">
           <img src="images/assets/fastfood/chickenBurger.jpg">
           <img src="images/assets/fastfood/beefBurger.jpg">
