Add styling to email and subscribe buttons

--- a/index.html
+++ b/index.html
@@ -54,26 +54,26 @@
         </div>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-md-6" id="fastfood-text">
         <h2>Fast Foods</h2>
         <h4>Enjoy our drinks please</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
           Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
           Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
           Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <button type="button" name="button"class="btn btn-default btn-block">VIEW GALLERY</button>
+          <button type="button" name="button"class="btn btn-default ">VIEW GALLERY</button>
       </div>
     </div>
 
     <div class="row" id="white-section2">
-      <div class="col-md-6">
+      <div class="col-md-6" id="drinks-text">
         <h2>Drinks</h2>
         <h4>Enjoy our food please</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
           Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
           Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
           Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <button type="button" name="button" class="btn btn-default btn-block">VIEW GALLERY</button>
+          <button type="button" name="button" class="btn btn-default">VIEW GALLERY</button>
       </div>
       <div class="col-md-6">
         <div class="well" >
@@ -100,10 +100,18 @@
     </div>
 
     <div class="row">
+      <div class="col-md-12" id="customers">
+        <div class="about">
+
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
       <div class="col-md-12 subscribe">
-        <p>Get our daily food items delivered through your email</p>
+        <h4 class="delivery">Get our daily food items delivered through your email</h4>
         <form>
-          <input type="text" value="Your email"></input>
+          <input type="text" value="Your email" id="email"></input>
         </form>
         <form>
           <input type="submit" value="Subscribe" id="subscribe"></input>
@@ -113,16 +121,24 @@
 
     <div class="row">
       <div class="col-md-12">
-        <div class="logo">
+        <div class="my-logos">
           <img src="images/assets/footerlogos/logo_white.png">
           <h4>MENU</h4>
           <p>Thats what we are</p>
         </div>
         <div class="social">
-          <img src="images/assets/footerlogos/facebook.png">
-          <img src="images/assets/footerlogos/twitter.png">
-          <img src="images/assets/footerlogos/pinterest.png">
+          <div>
+            <img src="images/assets/footerlogos/facebook.png" class="logo">
+          </div>
+          <div>
+            <img src="images/assets/footerlogos/twitter.png" class="logo">
+          </div>
+          <div>
+            <img src="images/assets/footerlogos/pinterest.png" class="logo">
+          </div>
+          <p>2016 Menu Restaurant</p>
         </div>
+
       </div>
     </div>
 
