--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
           Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
           Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <button type="button" name="button"class="btn btn-default ">VIEW GALLERY</button>
+          <button type="button" name="button"class="btn btn-default gallery-button" >VIEW GALLERY</button>
       </div>
     </div>
 
@@ -73,7 +73,7 @@
           Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
           Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
           Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <button type="button" name="button" class="btn btn-default">VIEW GALLERY</button>
+          <button type="button" name="button" class="btn btn-default gallery-button">VIEW GALLERY</button>
       </div>
       <div class="col-md-6">
         <div class="well" >
