Add logos at the footer

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <div class="row" id="white-section">
       <div class="col-md-6">
-        <div class="well">
+        <div class="well fastfood-image">
           <div class="row">
             <div class="col-md-12">
               <img src="images/assets/fastFood1.jpg">
@@ -77,11 +77,11 @@
       </div>
       <div class="col-md-6">
         <div class="well" >
-          <div class="row">
-            <div class="col-md-6">
+          <div class="row drinks-image thumbnail">
+            <div class="col-md-6" id="drink1">
               <img src="images/assets/drink1.jpg">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6" id="drink2">
               <img src="images/assets/drink2.jpg">
             </div>
           </div>
@@ -90,7 +90,7 @@
     </div>
 
     <div class="row">
-      <div class="col-md-12" id="section4">
+      <div class="col-md-12 section4" >
         <div class="gallery">
           <img src="images/assets/fastfood/chickenBurger.jpg">
           <img src="images/assets/fastfood/beefBurger.jpg">
@@ -101,8 +101,9 @@
 
     <div class="row">
       <div class="col-md-12" id="customers">
-        <div class="about">
-
+        <div class="well about">
+          <h4>Our Happy customers</h4>
+          <p>great food bla bla bla jddh hdhhd hdhd hdgd hsusjkskkjs</p>
         </div>
       </div>
     </div>
@@ -119,26 +120,25 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row my-logos">
       <div class="col-md-12">
-        <div class="my-logos">
-          <img src="images/assets/footerlogos/logo_white.png">
-          <h4>MENU</h4>
-          <p>Thats what we are</p>
+        <img src="images/assets/footerlogos/logo_white.png">
+        <h4>MENU</h4>
+        <p>Thats what we are</p>
+      </div>
+      <div class="social">
+        <div>
+          <img src="images/assets/footerlogos/facebook.png" class="logo">
         </div>
-        <div class="social">
-          <div>
-            <img src="images/assets/footerlogos/facebook.png" class="logo">
-          </div>
-          <div>
-            <img src="images/assets/footerlogos/twitter.png" class="logo">
-          </div>
-          <div>
-            <img src="images/assets/footerlogos/pinterest.png" class="logo">
-          </div>
+        <div>
+          <img src="images/assets/footerlogos/twitter.png" class="logo">
+        </div>
+        <div>
+          <img src="images/assets/footerlogos/pinterest.png" class="logo">
+        </div>
+        <div>
           <p>2016 Menu Restaurant</p>
         </div>
-
       </div>
     </div>
 
