Add background image for different types of foods

--- a/index.html
+++ b/index.html
@@ -102,8 +102,18 @@
     <div class="row">
       <div class="col-md-12" id="customers">
         <div class="well about">
-          <h4>Our Happy customers</h4>
-          <p>great food bla bla bla jddh hdhhd hdhd hdgd hsusjkskkjs</p>
+          <div class="row">
+            <div class="col-md-8 customers">
+              <h4>Our Happy customers</h4>
+              <p>great food bla bla bla jddh hdhhd hdhd hdgd hsusjkskkjs</p>
+            </div>
+            <div class="col-md-4 menu">
+              <h4>About Menu</h4>
+              <p>We are team of great food bla bla bla jddh hdhhd hdhd hdgd hsusjkskkjs</p>
+            </div>
+          </div>
+
+
         </div>
       </div>
     </div>
