Edit customer section

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
           <div class="row">
             <div class="col-md-8 customers">
               <h4>Our Happy customers</h4>
+              <h5>Our Customers</h5>
               <p>great food bla bla bla jddh hdhhd hdhd hdgd hsusjkskkjs</p>
             </div>
             <div class="col-md-4 menu">
