Add style to menu backgrounds

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   <script src="js/scripts.js"></script>
 </head>
 <body>
-  <div class="container">
-    <div class="row" id="header">
-      <div class="col-md-12">
+  <div class="container-fluid">
+    <div class="jumbotron" id="header">
         <img src="images/assets/logoBig.png" class="logobig">
         <h2>We Provide The Best Food<br> At <strong>Right Price</strong></h2>
       </div>
@@ -133,8 +132,8 @@
 
     <div class="row my-logos">
       <div class="col-md-12">
-        <img src="images/assets/footerlogos/logo_white.png">
-        <h4>MENU</h4>
+
+        <h4><img src="images/assets/footerlogos/logo_white.png">MENU</h4>
         <p>Thats what we are</p>
       </div>
       <div class="social">
